:construction: Fix option toggle pay